--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -12,30 +12,7 @@ comments: true
 {:toc}
 
 
-# 目录
-- [项目内容](#项目内容)  
-- [Members](#Members)  
-- [平台支持](#平台支持)
-- [开发方式和架构内容](#开发方式和架构内容)
-- [数据缓存机制](#数据缓存机制)
-    - [webview缓存](#webview缓存)
-    - [json数据缓存](#json数据缓存)
-    - [图片缓存](#图片缓存)
-- [安全](#安全)
-- [遇到的问题](#遇到的问题)
-- [推送方案](#推送方案)
-- [项目优化](#项目优化)
-- [其他](#其他)
-    - [UX优化](#UX优化)
-    - [项目档案](#项目档案)
-    - [三方库](#三方库)
-    - [MSC](#MSC)
-- [总结](#总结)
-- [Reference](#Reference)
-
-
-<h1 id="项目内容"> 项目内容 </h1>
-----------------------------------
+# 一、 项目内容
 
 硕粉俱乐部 app 客户端
 
@@ -44,24 +21,20 @@ comments: true
 - 搜索、浏览、发表、管理帖子
 - 管理个人信息
 - 好友发送信息
+- 三方登录
+- FAQ 接入
 
-
-<h1 id="Members"> Members </h1>
-----------------------------------
+Members 
 
 - Abbi
 - Scott
 - Venjee
 
-
-<h1 id="平台支持"> 平台支持 </h1>
-----------------------------------
+# 二、 平台支持
 
 [Android已经上架](http://www.wandoujia.com/apps/com.asus.cnzentalk)
 
-
-<h1 id="开发方式和架构内容"> 开发方式和架构内容 </h1>
-----------------------------------
+# 三、 开发方式和架构内容
 
 1. 混合开发，Android + H5 
  - 首页、推荐、版块、组文章、帖子正文是H5开发
@@ -73,14 +46,17 @@ comments: true
 6. 使用个推作为推送方案
 7. 使用Android官网，github，Stackoverflow和codekk作为主要的知识查找
 8. 使用Lint, FindBugs, Android atutotest, monkey test做app代码和quanlity检查
+9. 使用个推作为推送方案
+    - app端在个推服务器注册Project
+    - app启动时通过api把userid和clientid传送到ZenTalk服务器
+    - ZenTalk服务器会依据userid,clientid实现全局推送，分组推送，单点推送（ZenTalk服务器依据userid确认分组）
 
-
-<h1 id="数据缓存机制"> 数据缓存机制 </h1>
-----------------------------------
+# 四、 数据缓存机制
 
 项目采用缓存：webview缓存和json数据/图片缓存
 
-<h2 id="webview缓存"> webview缓存 </h2>
+## webview缓存
+
 webview缓存跟服务器配置有关，一般webview设定后就可以支援断网后显示缓存数据
        
        private void addWebViewCacheEnable(WebView webView){
@@ -93,7 +69,8 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
        }
        
 
-<h2 id="json数据缓存"> json数据缓存 </h2>
+## json数据缓存
+
 非实时性的接口（对实时显示要求不高的模块）
 
    - splash 3s页面
@@ -109,17 +86,15 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
 - 更多内容"
 - “收藏”，“提醒”，“消息”，“我的帖子”点击后，事实更新各自数据。
 
-<h2 id="图片缓存"> 图片缓存 </h2>
+## 图片缓存
+
 app端使用volley 库的图片缓存功能
 
-
-<h1 id="安全"> 安全 </h1>
-----------------------------------
+# 五、 安全
 
 服务器API加密机制 详见项目档案 : F:\Manager\ZenTalk\200-2 加密
 
-<h1 id="遇到的问题"> 遇到的问题 </h1>
-----------------------------------
+# 六、 遇到的问题
 
 1. H5 banner和 Native ViewPager滑动冲突
 
@@ -188,19 +163,7 @@ app端使用volley 库的图片缓存功能
 
    解决方案： app提供存储接口给H5使用
 
-
-<h1 id="推送方案"> 推送方案 </h1>
-----------------------------------
-
-使用个推作为推送方案
-
-- app端在个推服务器注册Project
-- app启动时通过api把userid和clientid传送到ZenTalk服务器
-- ZenTalk服务器会依据userid,clientid实现全局推送，分组推送，单点推送（ZenTalk服务器依据userid确认分组）
-
-
-<h1 id="项目优化"> 项目优化 </h1>
-----------------------------------
+# 七、 项目优化
 
 - Splash页面3s时，后台开始加载“首页”，“推荐”等几个主要Fragment. user可以3s后看到已经加载ready的首页
 - 首页不使用wex5框架编写的H5. 绕过wex5框架大量JS加载的时间。提示首页加载效率
@@ -238,16 +201,15 @@ app端使用volley 库的图片缓存功能
         3)	原图：已经支援
 
 
-<h1 id="其他"> 其他 </h1>
-----------------------------------
+# 八、 其他
 
-<h2 id="项目档案"> 项目档案 </h2>
+## 项目档案
 
 - 项目进度 [F:\Manager\ZenTalk\Works.xlsx](F:\Manager\ZenTalk\Works.xlsx)
 
 - 项目档案 [F:\Manager\ZenTalk](F:\Manager\ZenTalk)
 
-<h2 id="三方库"> 三方库 </h2>
+## 三方库
 
 - Http请求使用组件 [Volley](https://github.com/1sters/Android-Open-Sourse-Library/blob/master/http/volley.md)
 
@@ -267,7 +229,6 @@ app端使用volley 库的图片缓存功能
     - [Gson](https://github.com/google/gson)
     - [Jackson](https://github.com/FasterXML/jackson)
 
-
 - ImagePicker
 
     项目图片选择控件使用ImagePicker [https://github.com/jeasonlzy0216/ImagePicker](https://github.com/jeasonlzy0216/ImagePicker "https://github.com/jeasonlzy0216/ImagePicker")
@@ -284,31 +245,30 @@ app端使用volley 库的图片缓存功能
 - ViewPager
     项目transition过渡控件ViewPagerIndicator [https://github.com/JakeWharton/ViewPagerIndicator](https://github.com/JakeWharton/ViewPagerIndicator)
  
-<h2 id="MSC"> MSC </h2>
+## MSC
 
    - 网络状态变动处理逻辑
      
      网络重新连接后，首页和推荐webview刷新
+     
    - 小红点数据对比规则
 
      提醒，消息如果数据有变动，提示小红点。
      
      数据变动比对规则：last item time + length)
+     
    - app中HTML，CSS，JS压缩节省空间
      
      可以使用[在线工具](http://tool.oschina.net/jscompress)或者WebStorm插件
 
-
-<h1 id="总结"> 总结 </h1>
-----------------------------------
+# 九、 总结
 
 1. 项目采用混合开发，测试过运行时内存在可接受范围
 2. 混合开发在页面加载的用户体验上交Native弱一些
 2. app的首页webview加载优化非常重要。因为用户第一眼看到的就是首页。  
    app中对于首页webview加载优化方案：在splash页面3s计数时开始后台加载webview. 以提升用户体验。
 
-<h1 id="Reference"> Reference </h1>
-----------------------------------
+# 十、 Reference
 
 > [Android_Data -> 其它资料收集](https://github.com/Freelander/Android_Data)
 
