--- a/_posts/reactnative/2016-06-15-redux.md
+++ b/_posts/reactnative/2016-06-15-redux.md
@@ -8,17 +8,17 @@ tags: [ReactNative]
 comments: true
 ---
 
-## Redux简介
+# Redux简介
 
 Redux是继FB Flux 架构后推出的管理 React 数据流的亮眼之作。
 
 可以说Redux是对Flux 架构的一些简化。 Redux 限定一个store，让应用中数据结果集中化，提高可控性。
 
-## Action、Reducer、及 Store
+# Action、Reducer、及 Store
 
 Redux 主要分为三个部分 Action、Reducer、及 Store. 下面以counter Sample核心Code为例.
 
-### Action
+## Action
 
 action 主要用来传递操作 State 的信息。 Action是一个plain object(空对象或者key/value键值对)，
 
@@ -46,7 +46,7 @@ action内必须使用一个字符串类型的type字段。 当应用规模越来
     }
 
 
-### Reducer
+## Reducer
 
 可以认为Reducer是处理Action的逻辑操作。 Reducer一般为简单的处理函数，通过传入旧的state和action来更新state。
 
@@ -101,7 +101,7 @@ Redux可以分多个Reducer分别处理不同module的逻辑，最后combineRedu
     
     export default rootReducer;
     
-### Store
+## Store
 
 Action 代表操作消息，Reducer 用来处理消息并更新State。
 
@@ -134,7 +134,7 @@ Store 是一个把 Action 和 Reducer 结合起来的对象。
         return store;
     }
     
-## Page中使用
+# Page中使用
 
     class BaseApp extends Component {
         render() {
@@ -216,7 +216,7 @@ Store 是一个把 Action 和 Reducer 结合起来的对象。
 
 [Demo Code下载](https://github.com/vivianking6855/ReactNativeProject/tree/master/Advanced/redux-counter)
 
-## Redux相关lib
+# Redux相关lib
 
     "react-redux": "^4.4.5", // connect function
     "redux": "^3.5.2",
