--- a/_posts/books/生活/2017-03-28-Books-我的情绪为何总被他人左右.md
+++ b/_posts/books/生活/2017-03-28-Books-我的情绪为何总被他人左右.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2017-02-28 《我的情绪为何总被他人左右》
+title: 《我的情绪为何总被他人左右》
 date: 2017-02-28
 excerpt: "《我的情绪为何总被他人左右》"
 tags: [读书]
@@ -8,8 +8,7 @@ comments: true
 ---
 
 
-## 前言
-
+# 前言
 
 我们讲了很多书，比如《关键对话》、《幸福的婚姻》、《你就是孩子最好的玩具》，这些书一个关键环节都是要求大家要管理好自己的情绪。事实上，这是最难的，而这本书就是帮你管理你那些非理性的过激情绪。
 
