--- a/_posts/books/生活/2017-03-02-Books-次第花开.md
+++ b/_posts/books/生活/2017-03-02-Books-次第花开.md
@@ -14,13 +14,11 @@ comments: true
 
 # 前言
 
-
 一本讲佛法的书。一个人能把佛法讲的这么透彻，而且文字像诗一样优美。
 
 这本书的阅读方法是随便翻开一页，读下去就好，都有心灵的收获。
 
 # 认识苦
-
 
 根据佛陀的开示，解脱是从认识痛苦开始的。
 
@@ -43,9 +41,9 @@ comments: true
 - 佛陀说一切痛苦的根源在于我们长期以来对自身以及外部世界根深蒂固的误解，执幻为实。
 - 万事万物都依赖内在和外在的条件而生灭，因此不具固有性、恒常性，这就是无我和无常。
 - 人们误认为是无常带来了痛苦，而实际上造成痛苦的不是无常，而是对无常的恐惧。
-- 克服这种恐惧有两个办法，一是熟悉无常，二是了解恐惧无常的原因。
-- 面对无常，观察它，你才会发现不是只有自己在失去、在衰老、会生病、经历挫折、没有安全感。
-- 熟悉无常令我们内心真正放松而开阔，另一个好处是我们因此而更加珍惜人生，懂得修行佛法的意义。
+    - 克服这种恐惧有两个办法，一是熟悉无常，二是了解恐惧无常的原因。
+    - 面对无常，观察它，你才会发现不是只有自己在失去、在衰老、会生病、经历挫折、没有安全感。
+    - 熟悉无常令我们内心真正放松而开阔，另一个好处是我们因此而更加珍惜人生，懂得修行佛法的意义。
 
 # 人身难得
 
@@ -59,16 +57,14 @@ comments: true
 
 # 安乐
 
-- 放下执着就会安乐。
-- 但什么是执着？怎样才算放下？安乐，说到底，是一种心的感受。
+- 放下执着就会安乐。 但什么是执着？怎样才算放下？
+- 安乐，说到底，是一种心的感受。
 - 有时候人们并非不快乐，只是以为自己不快乐而已。
 - 其实，痛苦消失就是快乐。
 - 如果人们能够像观察自己的皱纹一样去熟悉自己心念的活动，就不难发现每一个单纯而直接的当下都带着淡淡的喜悦。
 - 如果不把快乐寄托于瞬息万变的外部世界带给人的刺激，那么快乐的感受是可以延长、扩大的。
 
-痛苦源自我执和法执，即对自己的执着和对周遭事物的执着。
-
-其实，没有一个绝对存在的“我”。
+痛苦源自我执和法执，即对自己的执着和对周遭事物的执着。其实，没有一个绝对存在的“我”。
 
 耗费一生精力企图在自己与外界之间砌一道围墙的做法是徒劳的，而这种徒劳带来的挫败感让我们很不快乐。
 
@@ -138,7 +134,6 @@ comments: true
 - 自以为是有时还表现为自卑。坚持认为自己一无是处，在任何情况下都不改变这个观点，这不是自以为是又是什么？
 - 习惯让我们看上去像个傻瓜。现在就开始改变这些习惯，这就是出离。
 
- 
 # 菩提心
 
 佛教徒是决心与自己亲密相处的人。亲密相处有两层含义
@@ -152,7 +147,7 @@ comments: true
 - 只有尊重自己内心的感受，才会体念他人的感受；
 - 只有相信自己觉悟的能力，才会相信他人觉悟的潜力。
 
-大乘佛教徒为了一切众生的最终解脱而发愿修行佛法、证得无上正等觉，这种发心称为菩提心。
+大乘佛教徒为了一切众生的最终解脱而发愿修行佛法、证得无上正等正觉，这种发心称为菩提心。
 
 - “愿诸众生永具安乐以及安乐因”，希望所有众生都快乐，这就是慈心；
 - “愿诸众生远离痛苦以及痛苦因”，希望所有众生都远离痛苦，这就是悲心；
@@ -160,7 +155,6 @@ comments: true
 - 对一切欣然接受，自然平等地对待众生，包容一切，毫无偏见，就是舍心。
 
 这就是慈悲喜舍，四无量心。
-
 
 # 六度
 
