--- a/_posts/books/生活/2017-03-20-Books-第三选择.md
+++ b/_posts/books/生活/2017-03-20-Books-第三选择.md
@@ -9,149 +9,206 @@ comments: true
 ---
 
 
+# 前言
 
+作者是史蒂芬.柯维，他的成名作《高效能人士的七个习惯》影响了全球大量成功人士。 还有一本《高效能家庭的七个习惯》。
 
+《第三选择》是柯维去世前写的最后一本书，根据他永远“活在高潮”的理念，这本书也可以被认为是他写的最好的一本。
 
-我的读后感
+他把之前的7个习惯浓缩成一件事，那就是随时随地能够做出第3选择。
 
-这本书的作者是史蒂芬.柯维，他的成名作《高效能人士的七个习惯》影响了全球大量成功人士。
-
-这本书是柯维去世前写的最后一本书，根据他永远“活在高潮”的理念，这本书也可以被认为是他写的最好的一本。他把之前的7个习惯浓缩成一件事，那就是随时随地能够做出第3选择。你可以把第3选择当做一种人生信仰，也可以仅仅当做一个思考问题解决问题的方法。
+你可以把第3选择当做一种人生信仰，也可以仅仅当做一个思考问题解决问题的方法。
 
 柯维受孔子影响很大，所以第3选择可以被看做是他老人家“吾道一以贯之”的集大成之作。
 
-转折点
+# 转折点
 
 如果你真的足够主动积极，愿意相信学习可以改变自己，并且愿意把自己所学应用到生活中，那么这本书将成为你人生的一个转折点。
 
 在这里你会看到
 
-一位父亲一夜之间挽救了自己抑郁多年的女儿；
+- 一位父亲一夜之间挽救了自己抑郁多年的女儿；
 
-一位警察局长将加拿大首都的青少年犯罪率减半；
+- 一位警察局长将加拿大首都的青少年犯罪率减半；
 
-一对夫妻曾经彼此几乎无话可说，而今笑对过往艰辛；
+- 一对夫妻曾经彼此几乎无话可说，而今笑对过往艰辛；
 
-一个团队将纽约时代广场从藏污纳垢的场所打造为北美顶级观光胜地；
+- 一个团队将纽约时代广场从藏污纳垢的场所打造为北美顶级观光胜地；
 
-……
- 
+这本书可以帮你：
 
-这本书可以帮你
-
-处理婚姻问题；解决工作难题；面对孩子的问题；走出财务困境；帮客户解决问题；处理可能会打官司的问题……
+- 处理婚姻问题；
+- 解决工作难题；
+- 面对孩子的问题；
+- 走出财务困境；
+- 帮客户解决问题；
+- 处理可能会打官司的问题……
 
 总之，这本书是用来解决一切问题的。
 
-什么是第三选择？
+# 什么是第三选择？
 
 面对任何问题，普通人都会产生两种选择
 
-打或者逃；
-
-我赢或者你赢；
-
-反抗或者忍受；
-
-成功或者失败；
-
-支持或者反对；
-
-……
+- 打或者逃；
+- 我赢或者你赢；
+- 反抗或者忍受；
+- 成功或者失败；
+- 支持或者反对；
 
 这两种选择的思维为这个世界带来了大量的纷争和成本，我们每天都在忙于说服别人，打败别人，讨好别人或者教育别人。
 
-为什么不试试第三选择？
+我们协同，一起达成另一个更好的结局。 核心是创造力。
 
-我们协同，一起达成另一个更好的结局。
+比如：一位母亲听说孩子的音乐课取消了，她怒气冲冲地找到老师想知道为什么。
 
-比如：一位母亲听说孩子的音乐课取消了，她怒气冲冲地找到老师想知道为什么。老师说原因是政府要求提高阅读和数学的时间。她本想抨击政府，但突然问了一个问题：肯定有办法让孩子们同时学习音乐和基础课。老师眨了眨眼睛说：当然，音乐包含着数学思维。于是，爱好音乐的家长和一个愿意研究的老师合作开发出了一系列通过音乐讲授基础课的课程。
+老师说原因是政府要求提高阅读和数学的时间。
+
+她本想抨击政府，但突然问了一个问题：肯定有办法让孩子们同时学习音乐和基础课。
+
+老师眨了眨眼睛说：当然，音乐包含着数学思维。
+
+于是，爱好音乐的家长和一个愿意研究的老师合作开发出了一系列通过音乐讲授基础课的课程。
 
 这就是一个第3选择。
 
-寻求协同思维模式
+# 寻求协同思维模式
 
-思维模式一
+## 思维模式一 我看到自己
 
-我看到自己。将自己看做一个有独立判断力和行为能力的独一无二的个体。听起来很容易，但事实上我们常常只看到自己的身份和所代表的派别。常常觉得自己的所作所为都是身不由己的。所以，遇到难题就会告诉自己“没办法，只能这样了”。这样轻易放弃自己选择的权利，你是无法看到自己的。
+主人翁何在？ 将自己看做一个有独立判断力和行为能力的独一无二的个体。
 
-思维模式二
+听起来很容易，但事实上我们常常只看到自己的身份和所代表的派别。
 
-我看到你。视他人为人而非物。很多时候我们在和他人打交道之前就已经对对方下了定义。“他是一个富二代”，“他是一个官僚”，“他是一个奸商”，“他没什么文化”……我们看到的不是一个人，而是一种身份，一种定义，甚至包含着仇恨和偏见。当你无法感知到对方和你一样是个人的时候，你永远不会想要和他探索第3选择。
+常常觉得自己的所作所为都是身不由己的。
 
-思维模式三
+所以，遇到难题就会告诉自己“没办法，只能这样了”。
 
-我找到你。面对冲突而不是回避或自卫。当你与别人见解不同时，最好的应答是：“你不同意？我需要听听你的想法”。并切实采取行动。在这一步需要极强的倾听能力，尤其是双方情绪激动的时候，更需要能够学会同理心倾听。而不是急于反驳和争辩。
+这样轻易放弃自己选择的权利，你是无法看到自己的。
 
-思维模式四
+## 思维模式二  我看到你
 
-我和你协同。找到一种更好的从未想到过的解决方案，而不是陷入相互攻击的循环。在这一步当中需要很好地使用头脑风暴的工具，不要在创意的过程中过多的评判和争执，鼓励大家想出尽可能多的方法，直到能够满足双方的最基本需求。必须要相信能够找到第3选择，这一步才会有好的效果。 
+视他人为人而非物
 
-创造协同的四个步骤
+很多时候我们在和他人打交道之前就已经对对方下了定义。
 
-询问
+“他是一个富二代”，“他是一个官僚”，“他是一个奸商”，“他没什么文化”
+
+我们看到的不是一个人，而是一种身份，一种定义，甚至包含着仇恨和偏见。
+
+当你无法感知到对方和你一样是个人的时候，你永远不会想要和他探索第3选择。
+
+## 思维模式三 我找到你
+
+面对冲突而不是回避或自卫。
+
+当你与别人见解不同时，最好的应答是：“你不同意？我需要听听你的想法”。
+
+并切实采取行动。在这一步需要极强的倾听能力，尤其是双方情绪激动的时候，更需要能够学会同理心倾听。而不是急于反驳和争辩。
+
+## 思维模式四 我和你协同
+
+找到一种更好的从未想到过的解决方案，而不是陷入相互攻击的循环。
+
+在这一步当中需要很好地使用头脑风暴的工具，不要在创意的过程中过多的评判和争执，鼓励大家想出尽可能多的方法，直到能够满足双方的最基本需求。
+
+必须要相信能够找到第3选择，这一步才会有好的效果。 
+
+### 创造协同的四个步骤
+
+- 询问
 
 问对方：你愿意寻找一种更好的解决方案吗？这是个革命性的问题，可以让对方减少防御，与你一同探索实验；
 
-界定
+- 界定
 
 双方讨论“更好”究竟意味着什么；
 
 把双方所需要的更好的基本条件都列举出来；
 
-创造
+- 创造
 
 双方共同努力，去探索和创造一个可以达成界定条件的第3选择；
 
-达成
+- 达成
 
 当形成真正的第3选择时，协同各方会群情激奋，这时达成了协同。
 
-职场中的第3选择
+# 职场中的第3选择
 
-一个女上司如何处理员工要求加薪
+一个女上司如何处理员工要求加薪。当员工要求加薪时，领导没有拒绝或者同意，而是说“多告诉我一些关于你的事”。
 
-当员工要求加薪时，领导没有拒绝或者同意，而是说“多告诉我一些关于你的事”。（我看到你）员工不仅讲了自己的家庭情况还谈到了最近的工作和对客户的分析。领导帮助员工对客户进行了深入的分析，并委派员工负责更多的客户。员工感受到了领导对自己的尊重，并看到了工作的希望，而且，最终也提高了收入。公司并未因此遭受损失，提升了员工能力，获得了客户。
+（我看到你）员工不仅讲了自己的家庭情况还谈到了最近的工作和对客户的分析。
 
+领导帮助员工对客户进行了深入的分析，并委派员工负责更多的客户。
 
+员工感受到了领导对自己的尊重，并看到了工作的希望，而且，最终也提高了收入。
 
-这一切源于领导的第3选择思维，她把员工当做人，而不是对手。她愿意倾听，员工才愿意协同。双方充分沟通才能找到最佳解决方案。
+公司并未因此遭受损失，提升了员工能力，获得了客户。
 
-家庭中的第3选择
+这一切源于领导的第3选择思维，她把员工当做人，而不是对手。
+
+她愿意倾听，员工才愿意协同。双方充分沟通才能找到最佳解决方案。
+
+# 家庭中的第3选择
 
 一位父亲如何处理女儿与吸毒者交往的事情
 
-直接要求女儿远离他的吸毒者朋友一定会引发大量争吵。父亲先让自己冷静下来，问女儿“告诉我发生在你身上的事情吧。”女儿说“你关心的只有你自己，你只不过不想有一个吸毒的女儿，因为那会让你没面子！”当然，女儿这样讲不公平，但父亲放下了关于公平的想法，而是说：“难为你了。”过了一会，女儿说“我觉得很孤独，你们都很忙，我没有朋友，他俩是我唯一可以说话的人。”
+直接要求女儿远离他的吸毒者朋友一定会引发大量争吵。
 
-这时你可以反驳，但这位父亲只是反映了女儿的情感“所以你真的很依赖他们俩。”女儿接着说了自己对于吸毒的看法，“他们吸毒的样子真可怕，我很担心他们”父亲说“看到你的朋友受苦，你一定很难受。”就这样，父亲和女儿逐渐达成协同，因为女儿说：“我不知道如果我也这样会怎样？”
+父亲先让自己冷静下来，问女儿“告诉我发生在你身上的事情吧。”
 
-孩子有时候说话是会伤人的，但你要知道他们的伤害只是针对他们的情绪而并非针对你。如果你针锋相对地反击，虽然寻求了公平，但丧失了获得第3选择的机会。
+女儿说“你关心的只有你自己，你只不过不想有一个吸毒的女儿，因为那会让你没面子！”
 
-校园中的第3选择
+当然，女儿这样讲不公平，但父亲放下了关于公平的想法，而是说：“难为你了”
+
+过了一会，女儿说“我觉得很孤独，你们都很忙，我没有朋友，他俩是我唯一可以说话的人。”
+
+这时你可以反驳，但这位父亲只是反映了女儿的情感 “所以你真的很依赖他们俩。”
+
+女儿接着说了自己对于吸毒的看法，“他们吸毒的样子真可怕，我很担心他们”父亲说“看到你的朋友受苦，你一定很难受。”
+
+就这样，父亲和女儿逐渐达成协同，因为女儿说：“我不知道如果我也这样会怎样？”
+
+孩子有时候说话是会伤人的，但你要知道他们的伤害只是针对他们的情绪而并非针对你。
+
+如果你针锋相对地反击，虽然寻求了公平，但丧失了获得第3选择的机会。
+
+# 校园中的第3选择
 
 一位校长如何改造一所混乱的学校
 
-校长没有把贫民窟的黑人孩子看做潜在的犯罪分子，而是把他们当做同样有潜力的人。他立志帮助每一个学生成为自己的领导者。
+校长没有把贫民窟的黑人孩子看做潜在的犯罪分子，而是把他们当做同样有潜力的人。
+
+他立志帮助每一个学生成为自己的领导者。
 
 他首先开始清除墙上的涂鸦，坚持了两年，“艺术家们”气馁了，校园恢复了清洁。
 
+家长不来学校，他就要求教师去家访。很多老师因此离职，但他坚持这样做。
 
-
-家长不来学校，他就要求教师去家访。很多老师因此离职，但他坚持这样做。离职时他会给老师们写推荐信。（不合作也是双赢的一种形式）
+离职时他会给老师们写推荐信。（不合作也是双赢的一种形式）
 
 他把学生分成20人一组，每组安排一个导师负责。不愿意做导师的教师也必须离开。
 
 最终，这所中学成为远近闻名的好学校。最重要的是，孩子们有了责任感和领导力。 
 
-这位校长完全可以坐在办公桌边抱怨政府经费不足，或者家长不配合教育。但他没有，他进行了第3选择，调动老师、家长和孩子共同探索更好的方法，而不是抱怨和等待失败。
+这位校长完全可以坐在办公桌边抱怨政府经费不足，或者家长不配合教育。
 
-第3选择和法律
+但他没有，他进行了第3选择，调动老师、家长和孩子共同探索更好的方法，而不是抱怨和等待失败。
 
-每年会有数以亿计的金钱被用于法律诉讼，很多诉讼双方根本都没有见过对方。就是习惯于把对方想象成难以沟通的混蛋。于是律师这个行业在现代社会崛起。一个普通的官司常常会打好几年，甚至几十年。最终的赢家只有司法系统。
+# 第3选择和法律
+
+每年会有数以亿计的金钱被用于法律诉讼，很多诉讼双方根本都没有见过对方。
+
+就是习惯于把对方想象成难以沟通的混蛋。
+
+于是律师这个行业在现代社会崛起。
+
+一个普通的官司常常会打好几年，甚至几十年。最终的赢家只有司法系统。
 
 第3选择不能解决所有诉讼问题，但如果可以耐心倾听对方，看到自己，也看到对方，双方愿意探索第3选择的话，很多诉讼都是可以避免的。
 
-社会中的第3选择
+# 社会中的第3选择
 
 如何重建纽约时代广场
 
@@ -167,11 +224,11 @@ comments: true
 
 4，吸引零售业入驻较低楼层，与新时代广场的顾客友好理念相一致。
 
-当形成了这四条令各方都能满意的界定之后，剩下的事就由高超的设计师来逐渐实现了。时代广场从过去的高犯罪率地区成为美国最吸引游客的景点名单榜首。
+当形成了这四条令各方都能满意的界定之后，剩下的事就由高超的设计师来逐渐实现了。
 
+时代广场从过去的高犯罪率地区成为美国最吸引游客的景点名单榜首。
 
-
-第3选择的人生
+# 第3选择的人生
 
 第3选择最本质上的思想其实是佛教讲的无分别心
 
@@ -181,7 +238,7 @@ comments: true
 
 如果你有一个永久的使命，你就可以永远活在高潮中，选择奋斗，同时也是选择了享受。最重要的是，有个愿意为之奋斗的使命。
 
-由内而外创造第3选择的20个建议
+# 由内而外创造第3选择的20个建议
 
 1.不骄傲自满，放下自己总是正确的想法。
 
@@ -223,13 +280,17 @@ comments: true
 
 20.永远不要忽视第3选择的可能性。
 
-读书会的第3选择
-
-我喜欢读书，也喜欢让更多的人喜欢读书。我的学生们喜欢让我推荐书，但读的很慢。于是，我想到解读好书的“十分钟读书法”。同时，很多人经过十分钟读书法之后更喜欢这本书还会再去购买图书。所以作者、我和会员形成了共赢。
-
-为了让社会因此受益，我想到读书会的收入可以拿出很大一部分用于帮助更多的孩子养成读书的好习惯。这是一个更大的第3选择，我想我会干一辈子。
-
-积分换书
-
 
 <br/>
+
+
+
+> 《小心，无良是一种病》
+
+> 《高效能人士的七个习惯》
+
+> 《高效能家庭的七个习惯》
+
+> 《活出生命的意义》
+
+> 《正念的奇迹》
