--- a/_posts/books/生活/2017-03-13-Books-我的情绪为何总被他人左右.md
+++ b/_posts/books/生活/2017-03-13-Books-我的情绪为何总被他人左右.md
@@ -7,7 +7,6 @@ tags: [读书]
 comments: true
 ---
 
-
 # 前言
 
 这本书帮你管理你那些非理性的过激情绪。
@@ -40,11 +39,12 @@ comments: true
     - 除了那些重大的事件外，A 就是那些烦人的小事，工作中的，比如难缠的上司、同事，办公室的勾心斗角，沟通不够等等；
     - 生活中与配偶或情人冲突，家务劳动，财务问题等等。有时候A还是一系列出错的事情。
     - 顺便说一句，人们最恐怖的事情是在一群人面前讲话，二号恐怖症是死亡。（插：可见我已经是个连死都不怕的人了，要在革命年代，绝对是个江姐式的人物）
-- 接下来我们暂时不管B，先看C
-    - C代表在A的情形下你的感觉和你的行为，如果你有一个重要的会议，但路上大堵车，这时你就会从平时的绅士变成路怒一族，不断并线加塞，嘴里骂骂咧咧。
-    - 那么真的是堵车导致了你这样的路怒行为了吗？不是的，在A和C之间，有一个B——就是我们对具体发生的人或事的思考、判断。模型如下：
-    - 这样你就会明白，不是A这件事一定会产生C的结果，A本身不会导致C，而是B导致了C，A只是诱因。
-    - 这儿有个例子
+- 接下来我们暂时不管B，先看C, C代表在A的情形下你的感觉和你的行为
+    - 如果你有一个重要的会议，但路上大堵车，这时你就会从平时的绅士变成路怒一族，不断并线加塞，嘴里骂骂咧咧。
+    - 那么真的是堵车导致了你这样的路怒行为了吗？不是的，在A和C之间，有一个B
+- B——就是我们对具体发生的人或事的思考、判断。
+
+这样你就会明白，不是A这件事一定会产生C的结果，A本身不会导致C，而是B导致了C，A只是诱因。这儿有个例子
     
     美国有个非常有名的哈林花式篮球表演队，他们有一个小品节目，有一个球员拿着一个篮球不撒手，
 
@@ -62,7 +62,7 @@ comments: true
 
 你的情绪和行为反应过激，其实是被三种病态的思维方式导致的：
 
-一是恐怖化的思维方式：你把什么都看成了灾难，非常害怕，你的思维模式就是“万一……怎么办”？
+### 一是恐怖化的思维方式：你把什么都看成了灾难，非常害怕，你的思维模式就是“万一……怎么办”？
 
    比如你去面试一个工作，你可能会想到：万一我回答不上问题怎么办？万一他们不喜欢我怎么办？万一我被人难堪了怎么办？……
     
@@ -72,7 +72,7 @@ comments: true
     
    当然我们不是让你应该冷漠寡情，没心没肺，像个机器人，这是过激反应的另一个极端。这也是另一种过激反应。
 
-二是应该化的思维方式。就是“我必须……”，“我一定……”，“我非……不可”……
+### 二是应该化的思维方式。就是“我必须……”，“我一定……”，“我非……不可”……
 
    这种“必须”、“应该”的思维可能从你的孩提时代就开始了，你的父母对你说：你应该对弟弟好一点；
     
@@ -80,7 +80,7 @@ comments: true
     
    而当你达到了“我应该”的标准时，你就开始了对别人的“你应该”，对别人要求严苛。
 
-三是合理化的思维方式。
+### 三是合理化的思维方式。
 
    这种思维就是把什么都觉得很合理，不可思议地将不道德或不得体的行为合理化，骗自己接受这种行为，简单地说就是逆来顺受。
     
@@ -94,9 +94,9 @@ comments: true
 
 ## 2、10种非理性的人生信条
 
-你如果老是用恐怖化、应该化、合理化去思考问题的话，就会陷入以下10种状态： 
+   你如果老是用恐怖化、应该化、合理化去思考问题的话，就会陷入以下10种状态： 
 
-信条1：太在乎别人怎么看待你。
+### 信条1：太在乎别人怎么看待你。
 
    因为太在乎会导致你对拒绝的强烈的恐惧感，比如说我绝不能让那些看重我的人轻视。
     
@@ -104,103 +104,98 @@ comments: true
     
    其实你的更好的选择可以是这样的：“我希望你们喜欢我，尊重我，你们要是做不到，我也能忍受”。（恐怖化）
 
-信条2：无法忍受在重要任务上失败，比如考大学、重要项目、重要关系。
+### 信条2：无法忍受在重要任务上失败
+
+   比如考大学、重要项目、重要关系。
 
    如果你让自己相信在任何重大事件上都输不起，你就不敢冒险，会墨守成规。
-    
+        
    还有就是无法忍受别人的批评，他们无法忍受出错，在一些小事上也斤斤计较，不依不饶。（恐怖化）
 
-信条3：人和事都应该朝着我要的方向发展，要不然就太糟糕了，无法忍受。
+### 信条3：人和事都应该朝着我要的方向发展，要不然就太糟糕了，无法忍受。
 
    这是由于低耐挫性和对不公平的敏感而造成的冲动反应，会导致你半途而废，消极否定，逃避责任，缺乏坚韧。（应该化）
 
-信条4：某件事出错了，肯定是有人出了问题。他们凡事绝对化，认为事情做得那么糟，肯定是有人不尽力，这些人善于把脏水往别人身上泼。（应该化）
+### 信条4：某件事出错了，肯定是有人出了问题。
 
-信条5：我对即将发生的事情总是抱着深深的忧虑。比如截止日期前完成所有的任务，公婆到访，拜见岳父母。（恐怖化）
+   他们凡事绝对化，认为事情做得那么糟，肯定是有人不尽力，这些人善于把脏水往别人身上泼。（应该化）
 
-信条6：每个问题都有完美的解决方案，我必须立即找到这些方法。有时候完美主义造就了拖延症。（应该化）
+### 信条5：我对即将发生的事情总是抱着深深的忧虑。
 
-信条7：在很多困境和责任面前可以让自己置身事外，心安理得。凡事都能找到一个合理化的理由。（合理化）
+   比如截止日期前完成所有的任务，公婆到访，拜见岳父母。（恐怖化）
 
-信条8：如果我事事不投入，保持若即脱离的关注，我会永远开心。很多人貌似参与了很多事，但其实他们只是坐在那儿，被动地观察。（合理化）
+### 信条6：每个问题都有完美的解决方案，我必须立即找到这些方法。
 
-信条9：因为过去或者小时候发生的一些不好的事情造成了我现在这个样子，我努力也改变不了。比如：父母是酒鬼，他们老吵架，以此为借口，不求改变。（合理化）
+   有时候完美主义造就了拖延症。（应该化）
 
-信条10：这些坏人坏事就不应该存在，我真不知道拿他们怎么办。他人他事会逼得你反应过激，这种说法看似有理，其实非常业余。（应该化）
+### 信条7：在很多困境和责任面前可以让自己置身事外，心安理得。
+
+   凡事都能找到一个合理化的理由。（合理化）
+
+### 信条8：如果我事事不投入，保持若即脱离的关注，我会永远开心。
+
+   很多人貌似参与了很多事，但其实他们只是坐在那儿，被动地观察。（合理化）
+
+### 信条9：因为过去或者小时候发生的一些不好的事情造成了我现在这个样子，我努力也改变不了。
+
+   比如：父母是酒鬼，他们老吵架，以此为借口，不求改变。（合理化）
+
+### 信条10：这些坏人坏事就不应该存在，我真不知道拿他们怎么办。
+
+   他人他事会逼得你反应过激，这种说法看似有理，其实非常业余。（应该化）
 
 # 怎样应对这三类病态的思维方式
 
-## 1、第四种思维模式
+## 1、第四种思维模式：更好的选择
 
 把事情恐怖化、应该化和合理化是三大逼迫我们就范的方式。要我们不去这么想的方法就是第四种思考模式：更好的选择
 
-- 就是你要看看在这三种思维模式之外有什么是更好的
+就是你要看看在这三种思维模式之外有什么是更好的
 
-   比如“我想要……”，“我更喜欢……”，“如果……就更好了”。
+- 比如“我想要……”，“我更喜欢……”，“如果……就更好了”。
     
-- 它不是必须时刻要积极，并不表明你能够或一定成功，而是说要去试一试，即使可能会失败、被拒绝。
+    它不是必须时刻要积极，并不表明你能够或一定成功，而是说要去试一试，即使可能会失败、被拒绝。
 
-   比如你是个演讲新手，但最近你有一场重要的演讲，你很可能会把前面三类病态思维都用用一下：
-   
-   “万一我搞砸了，没人听，大家聊天会怎么办？（恐怖化）
-    
-   我应该能够做好公共演讲，我都是成年人，我用不着害怕。（应该化）
-    
-   其实，这有多大的事，就是搞砸了也没人在乎。（合理化）”
-    
-   这样一来你就会一会害怕，一会自责，一会无所谓，就跟伤寒一样，一会想这一会想那。
+- 比如你是个演讲新手，但最近你有一场重要的演讲，你很可能会把前面三类病态思维都用用一下：   
+   - “万一我搞砸了，没人听，大家聊天会怎么办？（恐怖化）
+   - 我应该能够做好公共演讲，我都是成年人，我用不着害怕。（应该化）
+   - 其实，这有多大的事，就是搞砸了也没人在乎。（合理化）”
+   - 这样一来你就会一会害怕，一会自责，一会无所谓，就跟伤寒一样，一会想这一会想那。
     
 - 精神极度的焦虑紧张，但如果你能更好的选择思维方式：
 
    嗯，我想要做好演讲，但也不是非做好不可，现在还有一点时间，我可以在脑子里再过一次提纲；
     
-   其实我更喜欢演讲的过程，我想我肯定能从中学到什么；……这样你就不会背负一个心理包袱。
-
-   比如你有一个凶巴巴的上司：只会挑毛病，提要求，批评人。那么：
-
-- 恐怖化的思维：
-
-   万一我没干好怎么办，他会不会把我给开了，他是不是就是针对我？
-
-   结果：高度紧张、害怕
-
-- 应该化的思维：
-
-   他作为一个领导，他应该明白，我们努力工作，需要得到鼓励，他应该尊重人，这个令人讨厌的家伙！我应该辞职，让他吃瘪！
-
-   结果：对上司阴奉阳违，背地里闲话不断，工作毫无热情。
-
-- 合理化的思维方式：
-
-   天下乌鸦一般黑，上司都这个德行，我只要做完我的事就行了，我才不在乎呢。
-    
-   结果：混混日子，当一天和尚撞一天钟。
-
-- 更好的选择：
-
-   我想要让他欣赏我的努力，当然也不意味着他就该这样，我很在意这些，我可以找他谈谈，不发牢骚，不说难听的话。
+   其实我更喜欢演讲的过程，我想我肯定能从中学到什么；
    
-   结果：继续保持对工作的热情，以适当的态度与领导对话，但无论他是否改进，你都能游刃有余地处理事情，不要让这个人来烦你！
+   这样你就不会背负一个心理包袱。
+
+- 比如你有一个凶巴巴的上司：只会挑毛病，提要求，批评人。那么：
+    - 恐怖化的思维： 
+        - 万一我没干好怎么办，他会不会把我给开了，他是不是就是针对我？ 
+        - 结果：高度紧张、害怕
+    - 应该化的思维：
+        - 他作为一个领导，他应该明白，我们努力工作，需要得到鼓励，他应该尊重人，这个令人讨厌的家伙！我应该辞职，让他吃瘪！
+        - 结果：对上司阴奉阳违，背地里闲话不断，工作毫无热情。
+    - 合理化的思维方式：
+        - 天下乌鸦一般黑，上司都这个德行，我只要做完我的事就行了，我才不在乎呢。
+        - 结果：混混日子，当一天和尚撞一天钟。
+    - 更好的选择
+        - 我想要让他欣赏我的努力，当然也不意味着他就该这样，我很在意这些，我可以找他谈谈，不发牢骚，不说难听的话。
+        - 结果：继续保持对工作的热情，以适当的态度与领导对话，但无论他是否改进，你都能游刃有余地处理事情，不要让这个人来烦你！
 
 # 2、如何让“更好的选择”成为习惯
 
-   改变想法需要觉悟，还有就是一定要勤学苦练，需要用大量的练习建立起第四种思维模式的习惯“更好的选择”。
-   
-有四个步骤：
+改变想法需要觉悟，还有就是一定要勤学苦练，需要用大量的练习建立起第四种思维模式的习惯“更好的选择”。有四个步骤：
 
 - 步骤1、反思自己的C（感觉和行为）：我的感觉和行为是不是合适？
 - 步骤2、认真审视自己的B是怎么把自己弄成了C的样子（过分的焦虑、愤怒、抑郁、内疚）；
-
-（a）关于自己；
-
-（b）关于他人；
-
-（c）关于这种情形。
-
+    - （a）关于自己；
+    - （b）关于他人；
+    - （c）关于这种情形。
 - 步骤3、如何反击和对抗自己的非理性思考方式；
 - 步骤4、用什么样的更好选择来替代非理性思维。
-
-用“我想要……”；“我喜欢……”，如果……就更好了”
+    - 用“我想要……”；“我喜欢……”，如果……就更好了”
 
 案例：一位已婚多年的女士——乔安娜认为自己的丈夫迈克尔不像以往那样关爱她
 
@@ -228,7 +223,9 @@ comments: true
 
 - 步骤1：我的感受和行为
 
-非常厌恶吉姆，孤立他，冷嘲热讽，不邀请他参加讨论会。他的绩效拖了你和其他人的后腿，为此，你被上司骂了一通，情绪低落。
+非常厌恶吉姆，孤立他，冷嘲热讽，不邀请他参加讨论会。
+
+他的绩效拖了你和其他人的后腿，为此，你被上司骂了一通，情绪低落。
 
 - 步骤2：我的哪些非理性想法使得自己过分焦虑、生气、抑郁、不合作？
 
@@ -258,7 +255,9 @@ c：在这种情形下，我有哪些非理性的想法？
 
 让他改变一下自己；假如吉姆还是为自己辩解或无所谓，我可以直截了当地告诉他：我理解人人都免不了犯错误，
 
-但你的错误太多了，你让大家都不能很好地完成自己的工作。假如吉姆我你不客气，指责我凭什么对他指手画脚，
+但你的错误太多了，你让大家都不能很好地完成自己的工作。
+
+假如吉姆我你不客气，指责我凭什么对他指手画脚，
 
 我告诉他：你已经影响到了我们所有人，现在不是你个人的事情，我愿意和你一起改进，如果你不愿意，那我们就得找别的途径来解决这个问题。
 
@@ -358,7 +357,9 @@ c：关于这种情形，我如何想？
 
 这时你的情绪平复了，你可以运用一下我们讲授的沟通方法帮助他们进行沟通。
 
-比如，把他们分开，分别让他们分别讲述争执的理由，说出他们的感受和情绪，讲出对方的感受情绪，学会思考，具体办法可以参照《如何培养孩子的社会能力》
+比如，把他们分开，分别让他们分别讲述争执的理由，说出他们的感受和情绪，讲出对方的感受情绪，学会思考
+
+具体办法可以参照《如何培养孩子的社会能力》
 
 
 
