--- a/_posts/books/生活/2017-03-13-Books-次第花开.md
+++ b/_posts/books/生活/2017-03-13-Books-次第花开.md
@@ -47,9 +47,11 @@ comments: true
 
 # 人身难得
 
-- 生老病死、悲欢离合、幸福的、悲惨的、成功的、潦倒的，人生的种种经历，无一不在启发我们觉悟。
-- 佛经上说，如三千大千世界一样广阔的海洋上，漂浮着一根木轭，上有小孔，海底有只盲龟，每一百年浮出海面一次。
-- 盲龟浮出海面把头刚好撞进小孔中的几率，比我们获得人身的几率还大。
+生老病死、悲欢离合、幸福的、悲惨的、成功的、潦倒的，人生的种种经历，无一不在启发我们觉悟。
+
+佛经上说，如三千大千世界一样广阔的海洋上，漂浮着一根木轭，上有小孔，海底有只盲龟，每一百年浮出海面一次。
+
+盲龟浮出海面把头刚好撞进小孔中的几率，比我们获得人身的几率还大。
 
 作为人，我们免于地狱饿鬼畜生的痛苦愚痴，也不会像长寿天的天人那样，误认为没有善念恶念的禅定就是解脱而失去修法的机会。
 
