--- a/_posts/other/2017-03-14-about.md
+++ b/_posts/other/2017-03-14-about.md
@@ -1,17 +1,19 @@
 ---
 layout: post
-title: About Vivian
-date: 2016-09-23
+title: About
+date: 2017-3-14
+excerpt: "About"
 tags: [其他]
 comments: true
 ---
+
     
-## 目前专注于 Android, ReactNative开发	
+# 目前专注于 Android, ReactNative开发	
 
 - I love OpenSource!
 - I love GitHub!
 
-## Technology
+# Technology
 
 * Android
 * ReactNative
@@ -20,11 +22,11 @@ comments: true
 * C#,WPF
 * C++,MFC
 
-## 个人经历
+# 个人经历
 
 * 2008.07 - 至今 软体研发主管
 * 2008 硕士毕业于浙江大学电气工程学院
 
-## 联系方式
+# 联系方式
 
 * work_man2012@126.com
