--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -244,6 +244,17 @@ app端使用volley 库的图片缓存功能
 
 - ViewPager
     项目transition过渡控件ViewPagerIndicator [https://github.com/JakeWharton/ViewPagerIndicator](https://github.com/JakeWharton/ViewPagerIndicator)
+    
+## 推送选择
+
+推送：选用个推
+
+Reference
+
+‎- [Android推送SDK哪家好？](https://www.zhihu.com/question/22354498?sort=created&page=1 )
+- [个推concern?](https://www.zhihu.com/question/22354498/answer/24116601)
+- [国内Top500Android应用分析报告](https://www.sdk.cn/news/4174)
+
  
 ## MSC
 
@@ -282,4 +293,6 @@ app端使用volley 库的图片缓存功能
  
 > [Android WebView开发问题及优化汇总](http://blog.csdn.net/xyz_lmn/article/details/3947339473701701)
 
-> [Android WebView 缓存处理](http://www.open-open.com/lib/view/open1392188052301.html )
+> [Android WebView 缓存处理](http://www.open-open.com/lib/view/open1392188052301.html)
+
+> [国内Top500Android应用分析报告](https://www.sdk.cn/news/4174)
