--- a/_posts/books/生活/2017-03-21-Books-正面管教.md
+++ b/_posts/books/生活/2017-03-21-Books-正面管教.md
@@ -137,8 +137,9 @@ b、自卑——“我是个坏孩子”
 
 我爱你，愿意和你在一起，因此当你觉得能够尊重我时，就来告诉我，我会很乐意和你一起找出处理你怒气的其他方法。”
 
+记住，生气的当下，是最不适合解决问题的时候。
 
-记住，生气的当下，是最不适合解决问题的时候。在处理一个问题之前，先让自己冷静下来，直到能够用理性大脑来思考时再解决问题才有意义，这也是我们应该教给孩子的一项重要技能。
+在处理一个问题之前，先让自己冷静下来，直到能够用理性大脑来思考时再解决问题才有意义，这也是我们应该教给孩子的一项重要技能。
 
 什么样的语言称得上 “和善而坚定”，在我们此前讲述的《如何说孩子才会听 如何听孩子才肯说》中曾详细论述。
 
@@ -150,7 +151,9 @@ b、自卑——“我是个坏孩子”
 - 我知道你能想出一个好办法。
 - 我们待会儿再说这件事，现在应该上车了。
 
-挑战在于，很多父母认为，当孩子“故意惹恼他们”时，自己不应该和善。但是，如果大人要求孩子控制自己的行为，难道要大人控制自己的行为过分吗？
+挑战在于，很多父母认为，当孩子“故意惹恼他们”时，自己不应该和善。
+
+但是，如果大人要求孩子控制自己的行为，难道要大人控制自己的行为过分吗？
 
 # 为什么要使用正面管教
 
@@ -291,7 +294,7 @@ b、自卑——“我是个坏孩子”
 
 【寻求过度关注】
 
-孩子的目的：寻求过度关注。
+孩子的目的：寻求过度关注
 
 家长或老师的反应：心烦；恼怒；着急；愧疚。
 
@@ -318,7 +321,7 @@ b、自卑——“我是个坏孩子”
 
 【寻求权力】
 
-孩子的目的：寻求权力。
+孩子的目的：寻求权力
 
 家长或老师的反应：被激怒；受到挑战；受到威胁；被击败。
 
@@ -344,7 +347,7 @@ b、自卑——“我是个坏孩子”
 
 【报复】
 
-孩子的目的：报复。
+孩子的目的：报复
 
 家长或老师的反应：伤害；失望；难以置信；憎恶。
 
@@ -359,13 +362,13 @@ b、自卑——“我是个坏孩子”
 - 保持友善的态度，等孩子冷静下来。
 - 猜测孩子因为什么受伤，表达同情和理解。
 - 坦诚地告诉孩子你的感受。
-- 反射式倾听，启发式提问。“你看起来很伤心。能告诉我发生什么了吗？”如果你造成了伤害，用矫正错误的3R。
-
+- 反射式倾听，启发式提问。“你看起来很伤心。能告诉我发生什么了吗？”
+- 如果你造成了伤害，用矫正错误的3R。
 
 
 【自暴自弃】
 
-孩子的目的：自暴自弃。
+孩子的目的：自暴自弃
 
 家长或老师的反应：绝望；无望；无助；无能无力。
 
@@ -388,23 +391,27 @@ b、自卑——“我是个坏孩子”
 
 孩子意识不到自己的错误观念，但是有两条线索可以帮助我们识别孩子的错误目的。
 
-第一条线索：大人对孩子行为的情感反应。
+- 第一条线索：大人对孩子行为的情感反应。
 
-如果你感觉到以上类型对应的情感反应，孩子的错误目的就有可能识别出。
+    如果你感觉到以上类型对应的情感反应，孩子的错误目的就有可能识别出。
+    
+    虽然很多成人都说自己的情感反应是愤怒和沮丧，但事实上，这是对最初感觉的第二反应。
+    
+    受到威胁、伤害或无能为力，都会让人有非常无助的感觉，以致于我们很快用愤怒作为第二回应把它们掩盖起来。愤怒至少让我们有种虚假的力量感。
+    
+    问一问自己，愤怒和沮丧背后是什么感受，对照以上类型。
 
-虽然很多成人都说自己的情感反应是愤怒和沮丧，但事实上，这是对最初感觉的第二反应。
+- 第二条线索：当你要求孩子停止行为时，孩子的反应。
 
-受到威胁、伤害或无能为力，都会让人有非常无助的感觉，以致于我们很快用愤怒作为第二回应把它们掩盖起来。愤怒至少让我们有种虚假的力量感。
+    对照以上类型，你就能懂得孩子行为背后的信念。
+    
+    一旦懂得，大人就会乐意去鼓励孩子，而一个受到鼓舞的孩子不需要行为不当。
+    
+    对每一种错误目的的有效鼓励方式
+    
+    按照对应的情况鼓励孩子。
 
-问一问自己，愤怒和沮丧背后是什么感受，对照以上类型。
-
-第二条线索：当你要求孩子停止行为时，孩子的反应。
-
-对照以上类型，你就能懂得孩子行为背后的信念。一旦懂得，大人就会乐意去鼓励孩子，而一个受到鼓舞的孩子不需要行为不当。
-
-对每一种错误目的的有效鼓励方式
-
-按照对应的情况鼓励孩子。请注意，同一个行为可能代表着所有四种错误目的，并且，次序也不是必然从寻求关注开始，依次过度到自暴自弃，被动的孩子受到打击，很有可能直接就进入自暴自弃。
+    请注意，同一个行为可能代表着所有四种错误目的，并且，次序也不是必然从寻求关注开始，依次过度到自暴自弃，被动的孩子受到打击，很有可能直接就进入自暴自弃。
 
 
 ## 对待十几岁的孩子
