add manager docs

--- a/_posts/books/工作/2017-02-10-Books-关键对话.md
+++ b/_posts/books/工作/2017-02-10-Books-关键对话.md
@@ -74,7 +74,7 @@ comments: true
 ## 杜绝傻瓜式选择，要从心开始
 
 - 极怒不予人书,极喜不予人物。
-- 能做到不迁怒,不贰就是圣人了。颜回是圣人。
+- 能做到不迁怒,不贰过就是圣人了。颜回是圣人。
 - 一个积极的人是不会轻易被别人决定
 
 - 心理学的认知-行为疗法。A,B,C是认知原理。
