--- a/_posts/2016-07-15-学习资料.md
+++ b/_posts/2016-07-15-学习资料.md
@@ -45,6 +45,8 @@ lefttrees: true
 - [android学习之路 ](http://stormzhang.com/android/2014/07/07/learn-android-from-rookie/)
 - [Android官网博客 Android Developers Blog](http://android-developers.blogspot.com/) 
 - [开源项目源码解析地址](http://p.codekk.com)
+- [Android 开源项目分类汇总](https://github.com/Trinea/android-open-project)
+- [Android库收集](https://github.com/wasabeef/awesome-android-libraries)
 
 
 # ReactNative
