--- a/_posts/project/2015-09-01-Backup.md
+++ b/_posts/project/2015-09-01-Backup.md
@@ -59,6 +59,25 @@ framework层接口需要加入package name过滤等安全措施
 
 - [项目档案](N:\Project\Manager\Backup)
 
+## 华为的方案
+
+LocalSocketAddress来实现copy数据、getown、getmod、chown、chmod
+
+[使用的是LocalSocketAddress方式使APP具备调用底层native能力](http://blog.csdn.net/fdaopeng/article/details/23684139)
+
+  LocalSocketAddress localLocalSocketAddress = new LocalSocketAddress("filebackup", LocalSocketAddress.Namespace.RESERVED);
+      LocalSocket.connect(localLocalSocketAddress);
+
+在init.rc中增加了
+
+service filebackup /system/bin/filebackup
+
+ class main
+    
+socket filebackup stream 0600 radio system
+
+filebackup文件是二进制文件
+
 # 九、 总结
 
 - 主要是项目维护和新功能开发
