--- a/_posts/2016-07-15-学习资料.md
+++ b/_posts/2016-07-15-学习资料.md
@@ -25,6 +25,10 @@ lefttrees: true
 - [Blog访问量](https://tongji.cnzz.com/main.php?c=site&a=show)
 - [开源中国-精华阅读](http://www.oschina.net/search?q=精华阅读&scope=blog&fromerr=eRzjPp3U)
 
+# 书籍
+
+## [移动开发必读书单](http://mp.weixin.qq.com/s/vyeQUNKkiCjTrSyRrcH7lw)
+
 # Android
 -----------
 
