--- a/_posts/java/algorithm/2017-8-29-最大公约数和最小公倍数.md
+++ b/_posts/java/algorithm/2017-8-29-最大公约数和最小公倍数.md
@@ -3,8 +3,8 @@ layout: post
 title: Algorithm - 最大公约数和最小公倍数
 date: 2017-8-29
 excerpt: "Algorithm - 最大公约数和最小公倍数"
-categories: Android
-tags: [Android 基础]
+categories: Java
+tags: [Algorithm]
 comments: true
 ---
 
