--- a/_posts/android/kotlin/2017-6-23-Kotlin.md
+++ b/_posts/android/kotlin/2017-6-23-Kotlin.md
@@ -3,7 +3,7 @@ layout: post
 title: Kotlin
 date: 2017-6-23
 excerpt: "Kotlin"
-categories: Android 进阶
+categories: Android
 tags: [Android 进阶]
 comments: true
 ---
