--- a/_posts/android/kotlin/2017-6-23-Kotlin.md
+++ b/_posts/android/kotlin/2017-6-23-Kotlin.md
@@ -228,12 +228,14 @@ AS 版本2.3.3
             
 8. 效果图
 
+![](http://i.imgur.com/dICqp05.png)
 
+[Code下载](https://github.com/vivianking6855/android-advanced/tree/master/KotlinStart)
 
 
 # 总结
 
-总的感觉，性能上似乎没有大的改变，因为Kotlin也是基于JVM的。Kotlin有很多语法糖，对我个人而言，高阶函数和方法扩展等功能有不错的体验。
+总的感觉，性能上似乎没有大的改变，因为Kotlin也是基于JVM的。Kotlin有很多语法糖，不过高阶函数和方法扩展等功能有不错的体验。
 
 不过跟RN这类跨平台相比，Kotlin的相对Java的变动是微小的。
 
