--- a/_posts/other/2017-03-14-about.md
+++ b/_posts/other/2017-03-14-about.md
@@ -8,7 +8,7 @@ comments: true
 ---
 
     
-# 目前专注于 Android, ReactNative开发	
+# 目前专注于 Android	
 
 - I love OpenSource!
 - I love GitHub!
@@ -16,15 +16,13 @@ comments: true
 # Technology
 
 * Android
-* ReactNative
 * Java
 * H5,CSS,JS
-* C#,WPF
-* C++,MFC
+* ReactNative
 
 # 个人经历
 
-* 2008.07 - 至今 软体研发主管
+* 2008.07 - 至今 Android 资深开发 ，主管
 * 2008 硕士毕业于浙江大学电气工程学院
 
 # 联系方式
