--- a/_posts/2016-07-15-学习资料.md
+++ b/_posts/2016-07-15-学习资料.md
@@ -6,13 +6,7 @@ excerpt: "学习资料收集"
 categories: 资料集
 tags: [资料集]
 comments: true
-lefttrees: true
 ---
-
-
-* content
-{:toc}
-
 
 
 # 动态资讯
@@ -25,33 +19,8 @@ lefttrees: true
 - [Blog访问量](https://tongji.cnzz.com/main.php?c=site&a=show)
 - [开源中国-精华阅读](http://www.oschina.net/search?q=精华阅读&scope=blog&fromerr=eRzjPp3U)
 
-# 书籍
-
-## [移动开发必读书单](http://mp.weixin.qq.com/s/vyeQUNKkiCjTrSyRrcH7lw)
-
-# Android
------------
-
-## [Android 学习资料收集](https://github.com/Freelander/Android_Data)  
-
-## [Anroid开源库 TimLiu](https://github.com/Tim9Liu9/TimLiu-Android)
-
-## 补充
-
-- 博客
-    - [张鸿洋 微信推送](https://github.com/hongyangAndroid/hongyangWeixinArticles)
-- Github
-    - github排名 [https://github.com/trending](https://github.com/trending)
-    - github搜索：[https://github.com/search](https://github.com/search)
-
-## 其他
-
-- [android学习之路 ](http://stormzhang.com/android/2014/07/07/learn-android-from-rookie/)
-- [Android官网博客 Android Developers Blog](http://android-developers.blogspot.com/) 
-- [开源项目源码解析地址](http://p.codekk.com)
-- [Android 开源项目分类汇总](https://github.com/Trinea/android-open-project)
-- [Android库收集](https://github.com/wasabeef/awesome-android-libraries)
-
+# [Android](http://vivianking6855.github.io/2017/09/14/Android-Learning/)
+--------------
 
 # ReactNative
 --------------
@@ -67,7 +36,7 @@ lefttrees: true
 - [控制代码质量ESLint 使用入门](http://www.tuicool.com/articles/7JZZJzn)
 - [W3C Scholl](http://www.w3school.com.cn/)
 
-# Java
+# [Java](http://vivianking6855.github.io/2017/09/14/Android-Learning/)
 ---------
 
 
