--- a/_posts/project/2015-09-01-Backup.md
+++ b/_posts/project/2015-09-01-Backup.md
@@ -12,15 +12,23 @@ comments: true
 {:toc}
 
 
+# 一、 项目简介
 
-# 一、 项目内容
+1. 功能描述
 
-Android 手机备份工具。 目前只支持ASUS手机。
+    Android 手机备份工具。 目前只支持ASUS手机。
+    
+    - 可以备份还原闹钟、电子邮件设定、随手记、联系人，短信，通话记录等
+    - 可以备份还原system/third pirty apk和data到 SD card
+    - 不会备份内置存储空间数据。例如照片，video，music，screenshot，record，document等
+    - 定时备份通知
 
-- 可以备份还原闹钟、电子邮件设定、随手记、联系人，短信，通话记录等
-- 可以备份还原system/third pirty apk和data到 SD card
-- 不会备份内置存储空间数据。例如照片，video，music，screenshot，record，document等
-- 定时备份通知
+2. Members
+
+- Abbi
+- Vivian
+
+3. 开发时间：2015.9.1 ~ 2016.12.30 （开发结束）
 
 # 二、 平台支持
 
