--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -12,7 +12,10 @@ comments: true
 {:toc}
 
 
-# 一、 项目内容
+
+# 一、 项目简介
+
+1. 功能描述
 
 硕粉俱乐部 app 客户端
 
@@ -24,11 +27,15 @@ comments: true
 - 三方登录
 - FAQ 接入
 
-Members 
+2. Members
 
 - Abbi
 - Scott
 - Venjee
+- Vivian
+
+3. 开发时间：2016.1.29 ~ 2017.11 （开发结束）
+
 
 # 二、 平台支持
 
