update contact and idlehandler

--- a/_posts/project/2017-7-24-Contact.md
+++ b/_posts/project/2017-7-24-Contact.md
@@ -57,9 +57,13 @@ Android版本已发布，设备出厂预装
 
     铃声选择调用的系统的picker
     
+    Intent intent = new Intent(RingtoneManager.ACTION_RINGTONE_PICKER);
+           
     但是如果有third party的应用也支援这个filter, 可能会造成选择的混乱。
     
     为了维持之前spec：使用系统的铃声选择。解决方案是给intent指定package name，这样只会弹出系统默认的那个。
+    
+    intent.setPackage("com.android.providers.media");
     
     package name是通过: adb shell dumpsys activity找出来
 
