--- a/_posts/python/2017-12-16-爬虫学习之路_3.md
+++ b/_posts/python/2017-12-16-爬虫学习之路_3.md
@@ -19,21 +19,22 @@ comments: true
 
 1. pip install pyspider
 
-安装pyspider （前面python 已经安装了2.7)
+    安装pyspider （前面python 已经安装了2.7)
 
 2. 下载phantomjs-2.1.1-windows
 
-加入环境变量，动态加载js会用到
+    加入环境变量，动态加载js会用到
 
 3. 我们使用mysql存储
 
-如果不需要存储到mysql, 这步可以直接跳过
+    如果不需要存储到mysql, 这步可以直接跳过
 
-安装mysql，Navicat Premium（db管理工具）
+    安装mysql，Navicat Premium（db管理工具）
 
 4. 运行 cmd -> pyspider all
 
-![](https://i.imgur.com/OfqC6c3.png)
+    ![](https://i.imgur.com/OfqC6c3.png)
+    
 
 到这里环境就搭建完成了
 
@@ -59,6 +60,7 @@ code说明：
     - @config(age=60)  # 有效期1min 一分钟后才会过期。真正抓的频率是 on_start的@ every + 这里的age。即2分钟才会run一次index_wdjpage
     - @config(priority=3) # priority设置优先级，数字越高代表最先run到
 
+Code实例
 
         #!/usr/bin/env python
         # -*- encoding: utf-8 -*-
@@ -192,7 +194,6 @@ code说明：
             def getCurrentIntTime(self):
                 return (int)(time.mktime(time.localtime(time.time())))
     
-
 
 # Pyspider的Tip
 
