--- a/_posts/AI/2017-11-16-AI学习-1.md
+++ b/_posts/AI/2017-11-16-AI学习-1.md
@@ -8,6 +8,14 @@ tags: [AI]
 comments: true
 ---
 
+# 简介
+
+
+# 谷歌发布移动端深度学习框架TensorFlow Lite
+
+[谷歌发布移动端深度学习框架TensorFlow Lite](http://www.cocoachina.com/ai/20171117/21215.html)
+
+[Github tensorflow/tensorflow](https://github.com/tensorflow/tensorflow/tree/master/tensorflow/contrib/lite)
 
 
 # Reference
@@ -15,3 +23,9 @@ comments: true
 [TensorFlow 官方文档中文版 ](http://wiki.jikexueyuan.com/project/tensorflow-zh/get_started/basic_usage.html)
 
 [AI励志 从非科班到拿下竞赛一等奖](http://blog.csdn.net/qq_40027052/article/details/78542679)
+
+[谷歌推出TensorFlow Lite 机器学习框架新突破](https://www.toutiao.com/a6488576952604033549/)
+
+[Tensorflow Lite之Android实践](http://blog.csdn.net/wu__di/article/details/78570303)
+
+[谷歌推TensorFlow Lite :帮开发者在手机上部署AI](http://www.fromgeek.com/smarthardware/126347.html)
