--- a/_posts/project/2017-7-24-Contact.md
+++ b/_posts/project/2017-7-24-Contact.md
@@ -76,6 +76,10 @@ Android版本已发布，设备出厂预装
 - 选择几个较独立的类优化：Application，Fragment,ResultList,EZMode
 - 选则几个独立功能模块来优化：例如输入延迟处理，搜索算法
 - 框架上的优化:RxJava & RxAndroid
+- 性能优化
+
+详情请参看 “Contact-Optimization”
+
 
 # 八、 其他
 
