--- a/_posts/AI/2017-11-16-AI学习-1.md
+++ b/_posts/AI/2017-11-16-AI学习-1.md
@@ -15,7 +15,7 @@ comments: true
 
 [谷歌发布移动端深度学习框架TensorFlow Lite](http://www.cocoachina.com/ai/20171117/21215.html)
 
-[Github tensorflow/tensorflow](https://github.com/tensorflow/tensorflow/tree/master/tensorflow/contrib/lite)
+[Github tensorflow](https://github.com/tensorflow/tensorflow/tree/master/tensorflow/contrib/lite)
 
 
 # Reference
