--- a/_posts/2016-07-15-学习资料.md
+++ b/_posts/2016-07-15-学习资料.md
@@ -9,10 +9,20 @@ comments: true
 ---
 
 
+* content
+{:toc}
+
+
+
+# 知识图谱
+
+![](https://i.imgur.com/dlsq778.png)
+
 # 动态资讯
 -----------
 
 - [今日头条](http://toutiao.com/) 
+- [知乎](https://www.zhihu.com/)
 - [新浪财经](http://finance.sina.com.cn/) 
 - [CNN](http://edition.cnn.com/) 
 - [美国之音](http://www.voa365.com/VOA/1425.html)
