--- a/_posts/other/2017-03-14-about.md
+++ b/_posts/other/2017-03-14-about.md
@@ -1,29 +1,37 @@
 ---
 layout: post
 title: About
-date: 2017-3-14
+date: 2018-3-8
 excerpt: "About"
 tags: [其他]
 comments: true
 ---
 
     
-# 目前专注于 Android	
+# 自我定位
 
-- I love OpenSource!
-- I love GitHub!
+* 软件架构师
+* 业务架构师
 
-# Technology
+# 个人技能
 
 * Android
 * Java
+* Python
 * H5,CSS,JS
 * ReactNative
+* 数据结构
+* 设计模式
+* 数据库
+* 操作系统
+
+* 具有很强的系统思维的能力
+* 学习快捷，善沟通，决策和总结
 
 # 个人经历
 
-* 2008.07 - 至今 Android 资深开发 ，主管
-* 2008 硕士毕业于浙江大学电气工程学院
+* 2008.07 - 至今 技术主任，项目主管
+* 2008 江大学电气工程学院 硕士
 
 # 联系方式
 
