--- a/_posts/company/2018-3-8-公司-目录.md
+++ b/_posts/company/2018-3-8-公司-目录.md
@@ -25,20 +25,7 @@ comments: true
 - 许式伟：七牛云创始人兼CEO，Go语言专家。 南京大学物理学专业学士学位
 - 吕桂华：七牛云联合创始人总裁，负责大运营体系。超过15年的软件和互联网行业从业经验，在办公软件、企业服务、网络游戏、云计算和大数据等方面积累了丰富的经验。 浙江大学
 
-# 术语
-
-互联网，AI，BigData等领域需要了解的一些术语
-
-- 富媒体：Rich Media。不是一种具体的互联网媒体形式。富媒体包含流媒体、声音、Flash、以及Java、Javascript、DHTML等程序设计语言的形式之一或者几种的组合
-- +互联网：针对传统行业融合、产业变革所产生的概念
-    - 是传统行业借助互联网手段把线下的生意做到线上去，并将互联网技术融合到产品的生产、管理、销售、服务等环节中。
-    - +互联网强调顺势创新，是传统行业以既有业务为基础利用互联网技术和理念来提高为用户服务的效率和质量。
-- 互联网+：就是“互联网+各个传统行业”，利用信息通信技术以及互联网平台，让互联网与传统行业进行深度融合，创造新的发展生态。
-    - 它代表一种新的社会形态，即充分发挥互联网在社会资源配置中的优化和集成作用，将互联网的创新成果深度融合于经济、社会各域之中，提升全社会的创新力和生产力，形成更广泛的以互联网为基础设施和实现工具的经济发展新形态
-- RTMP是Real Time Messaging Protocol（实时消息传输协议）的首字母缩写。该协议基于TCP，是一个协议族，
-- QUIC 推流方案如何实现直播 0 卡顿。 Quick UDP Internet Connection
-
-
+# 互联网术语
 
 # Reference
 
