--- a/_posts/company/2018-3-8-互联网-术语.md
+++ b/_posts/company/2018-3-8-互联网-术语.md
@@ -29,4 +29,9 @@ comments: true
 
 # 直播
 
-- 控麦：麦克的控制权在谁的手里，就可以控制让谁可以说话
+- 抢麦，上麦，下麦，放麦，控麦：通常是在语间聊天室中或多人语音聊天
+    - 如果想发言，可以点抢麦。系统自动麦序，或者人多时自己向管理员要求麦序向前
+    - 挨到了，就是上麦了
+    - 上了麦就要带好耳机对着话筒发言了，或者播放机器里的歌或在线网页上的歌。
+    - 时间到了就自然下麦了或者时间还没到，自己点一下放麦，就自动下麦了。
+    - 控麦一版是管理员控制
