--- a/_posts/company/2018-3-8-公司-目录.md
+++ b/_posts/company/2018-3-8-公司-目录.md
@@ -25,7 +25,7 @@ comments: true
 - 许式伟：七牛云创始人兼CEO，Go语言专家。 南京大学物理学专业学士学位
 - 吕桂华：七牛云联合创始人总裁，负责大运营体系。超过15年的软件和互联网行业从业经验，在办公软件、企业服务、网络游戏、云计算和大数据等方面积累了丰富的经验。 浙江大学
 
-# 互联网术语
+# [互联网术语](http://vivianking6855.github.io/2018/03/08/%E4%BA%92%E8%81%94%E7%BD%91-%E6%9C%AF%E8%AF%AD/)
 
 # Reference
 
