--- a/_posts/2018-3-16-Books.md
+++ b/_posts/2018-3-16-Books.md
@@ -21,18 +21,35 @@ comments: true
 
 # Android
 
-- Thinking In Java： Java 的经典书籍
+
 - 第一行代码： 非常适合新手
 - 疯狂Android讲义： 内容很详细, 代码很多, 可以跟着代码一步步敲
 - Android群英传 
 - Android开发艺术探索： Android 进阶类书籍
 - App 研发录： 总结应用开发中常见的实用技巧和疑难问题解决方法
+
+设计模式
+
 - Android 设计模式源码分析： 浅入深地剖析设计模式的
+- android之大话设计模式
+
+源码
+
+- Android系统源代码情景分析
 - 《Embedded Android》 推荐理由：从底层讲解android系统的机制与设计，比较适合具有一定经验的开发者，属于进阶书籍
+
+Fragment
+
+- Creating Dynamic UI with Android Fragments
+
+# Java
+
+- Thinking In Java： Java 的经典书籍
+- Effective Java Java进阶
 - 《Java并发编程实战》 推荐理由：通过java现成的并发工具类介绍和实例，深入浅出的说明如何安全地进行多线程操作和优化。
 - 《Android.C++.with.the.NDK》 推荐理由：android jni入门与提高，系统讲解android jni的编译、提供的接口、java jni的通讯方式等，对于需要学习jni开发的同学是必读，毕竟jni文档缺乏。
 - 《深入了解JVM虚拟机》 推荐理由：这本书对了解底层机制很有帮助，是进阶必选
-- 《Java编程思想》 推荐理由：Java编程思想是Java圣经，要有一定经验去看效率才不错。
+- 《Java编程思想》 推荐理由：Java编程思想是Java圣经，要有一定经验去看效率才不错
 
 
 # 计算机基础
