--- a/_posts/2018-3-16-知识News.md
+++ b/_posts/2018-3-16-知识News.md
@@ -17,11 +17,12 @@ comments: true
 # Android 动态资讯
 ---
 
-- 圈内动态：知乎, 脉脉，棱镜
-- 技术社区：Github, SegmentFault, stackoverflow，腾讯云社区
+- 圈内动态： 知乎, 脉脉，棱镜
+- 技术社区： CSDN，Github, SegmentFault, stackoverflow，腾讯云社区
 - 公众号
     - 腾讯Bugly
 - 知名博客
+- CSDNhttp://blog.csdn.net/column.html
     - [Android官网博客 Android Developers Blog](http://android-developers.blogspot.com/) 
     - [张鸿洋 微信推送](https://github.com/hongyangAndroid/hongyangWeixinArticles)
 
