--- a/_posts/2018-3-16-知识News.md
+++ b/_posts/2018-3-16-知识News.md
@@ -18,7 +18,7 @@ comments: true
 ---
 
 - 圈内动态： 知乎, 脉脉，棱镜
-- 技术社区： CSDN，Github, SegmentFault, stackoverflow，腾讯云社区
+- 技术社区： CSDN，Github, SegmentFault, stackoverflow，腾讯云社区，简书
 - 公众号
     - 腾讯Bugly
 - 知名博客
