--- a/_posts/algorithm/2018-3-30-阶梯树-求和.md
+++ b/_posts/algorithm/2018-3-30-阶梯树-求和.md
@@ -21,7 +21,7 @@ comments: true
 
 # 实现
 
-面试的手写的时候，面试官有提醒n位阶梯树是n-1为阶梯树向右扩展（见过最和蔼可亲的面试官了O(∩_∩)O哈哈~）
+面试手写code的时候，面试官有提醒n位阶梯树是n-1为阶梯树向右扩展（见过最和蔼可亲的面试官了O(∩_∩)O哈哈~）
 
 核心的思想有两点：
 
