--- a/_posts/algorithm/2018-3-30-阶梯树-求和.md
+++ b/_posts/algorithm/2018-3-30-阶梯树-求和.md
@@ -26,7 +26,7 @@ comments: true
 核心的思想有两点：
 
 - 每个数字前后都比它加1 or 减1, 从组合上来说就是C21
-- n为的阶梯树是n-1位的阶梯树向右扩展
+- n位的阶梯树是n-1位的阶梯树向右扩展
 
 现场没有写好，回来后仔细思量下，用循环和递归两种方式实现了下。
 
@@ -215,4 +215,4 @@ comments: true
 备注：
 
 - 递归比循环快，但是递归要小心stack的问题，因为要压栈。
-- 先写循环，在写递归会快一些。循环相当于正向思维；递归是逆向思维；
+- 先写循环，再写递归会快一些。循环相当于正向思维；递归偏向逆向思维；
