--- a/_posts/2018-3-16-知识News.md
+++ b/_posts/2018-3-16-知识News.md
@@ -21,19 +21,26 @@ comments: true
 - 技术社区： CSDN，Github, SegmentFault, stackoverflow，腾讯云社区，简书
 - 公众号
     - 腾讯Bugly
+    - 阿里技术
+    - 鸿样
+    - stormzhang
 - 知名博客
-- CSDNhttp://blog.csdn.net/column.html
+    - [CSDN](http://blog.csdn.net/column.html)
     - [Android官网博客 Android Developers Blog](http://android-developers.blogspot.com/) 
-    - [张鸿洋 微信推送](https://github.com/hongyangAndroid/hongyangWeixinArticles)
+- 开源学习资料
+    - 开源库
+        - [Anroid开源库 TimLiu](https://github.com/Tim9Liu9/TimLiu-Android)
+        - [2017年Android百大框架排行榜](https://www.cnblogs.com/jincheng-yangchaofan/articles/7018780.html)
+        - [Android库收集](https://github.com/wasabeef/awesome-android-libraries)
+        - [Android 开发人员不得不收集的代码](https://github.com/Blankj/AndroidUtilCode)
+    - 学习资料
+        - [google samples](https://github.com/googlesamples)
+        - [LearningNotes](https://github.com/francistao/LearningNotes)
+        - [Android 学习资料收集](https://github.com/Freelander/Android_Data)  
+        - [android学习之路 ](http://stormzhang.com/android/2014/07/07/learn-android-from-rookie/)
+        - [开源项目源码解析地址](http://p.codekk.com)
+        - [Android 开源项目分类汇总](https://github.com/Trinea/android-open-project)
 
-- 知名知识整理
-    - [LearningNotes](https://github.com/francistao/LearningNotes)
-    - [android学习之路 ](http://stormzhang.com/android/2014/07/07/learn-android-from-rookie/)
-    - [Android学习资料收集](https://github.com/Freelander/Android_Data)  
-    - [Anroid开源库 TimLiu](https://github.com/Tim9Liu9/TimLiu-Android)
-    - [开源项目源码解析地址](http://p.codekk.com)
-    - [Android 开源项目分类汇总](https://github.com/Trinea/android-open-project)
-    - [Android库收集](https://github.com/wasabeef/awesome-android-libraries)
 
 # 科技，生活资讯拓展
 
