--- a/_posts/company/2017-03-14-about.md
+++ b/_posts/company/2017-03-14-about.md
@@ -15,23 +15,24 @@ comments: true
 
 # 个人技能
 
-* Android
-* Java
-* Python
-* H5,CSS,JS
-* ReactNative
-* 数据结构
-* 设计模式
-* 数据库
-* 操作系统
+- Android
+- Java
+- Python
+- H5,CSS,JS
+- ReactNative
+- 数据结构
+- 设计模式
+- 数据库
+- 操作系统
 
-* 具有很强的系统思维的能力
-* 学习快捷，善沟通，决策和总结
+---
+
+* 学习能力强，善分析，总结，喜欢分享!
 
 # 个人经历
 
-* 2008.07 - 至今 技术主任，项目主管
-* 2008 江大学电气工程学院 硕士
+* 2008.07 - 至今 技术主管
+* 2008 浙江大学电气工程学院 硕士
 
 # 联系方式
 
